[gd_scene load_steps=3 format=3 uid="uid://c3doxja2e6dtk"]

[ext_resource type="Script" path="res://help3.gd" id="1_36sjp"]
[ext_resource type="AudioStream" uid="uid://cwug1gygn2ddj" path="res://gaming-sound-143716.mp3" id="2_ckqaf"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 808.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36sjp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1976.0
offset_bottom = 1032.0
color = Color(0, 0.0313726, 0.133333, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1984.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 125
text = "Help"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 264.0
offset_right = 920.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 90
text = "AI"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 816.0
offset_right = 1376.0
offset_bottom = 984.0
theme_override_font_sizes/font_size = 90
text = "Back"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1080.0
offset_top = 264.0
offset_right = 1840.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 90
text = "2 Player"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ckqaf")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
